fixed alignment

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -56,3 +56,11 @@ img {
   width: 50%;
   border-top-color: #e74c3c;
 }
+
+body > div.container > div > div > div > h1 {
+  text-align: center;
+}
+
+body > div.container > div > div > div > p {
+  text-align: center;
+}
